# encrypt-query-language

./: ### Troubleshooting Guide for Potential .md  .gitignore  .gitmodules  .iterm_tab_color  2025-10-27-phase-4-review.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_BATCH_1.md  CODE_REVIEW_BATCH_2.md  CODE_REVIEW_BATCH_3.md  CODE_REVIEW_BATCH_4.md  CODE_REVIEW_PHASE_4_DOXYGEN.md  Cargo.toml  DEVELOPMENT.md  Doxyfile  GETTINGSTARTED.md  INDEX_WALKTHROUGH.md  JSON.md  MIGRATOR.md  NATIVE_POSTGRES_JSON_COMPARED_TO_EQL.md  ONBOARDING.md  PROXY.md  README.bigpicture.md  README.md  REFERENCE.md  SQLX_TESTING_APPROACH.md  SUPABASE.md  TESTING_FRAMEWORK_COMPARISON.md  WHY.md  WHYEQL.md  doxygen-branches-state-2025-10-29.md  justfile  mise.toml  release  tracking.md  troubleshooting.md
crates/eql-types/: Cargo.toml  README.md
crates/eql-types/bindings/: EncryptedPayload.ts  EqlEncrypted.ts  Identifier.ts  Int4.ts  Int4Eq.ts  Int4Ord.ts  Int4Tagged.ts  SteVecElement.ts  SteVecPayload.ts  SteVecTerm.ts
crates/eql-types/schema/: EqlEncrypted.json  Int4Eq.json  Int4Tagged.json
crates/eql-types/src/: int4.rs  lib.rs  v2_3.rs
crates/eql-types/tests/: conformance.rs
rust-tests/: Cargo.toml  README.md  run-tests.sh
rust-tests/src/: lib.rs
rust-tests/tests/: add_column_test.rs  test_helpers_test.rs
tests/eql_tests/: Cargo.toml  README.md
tests/eql_tests/migrations/: 001_install_eql.sql  README.md
tests/eql_tests/src/: assertions.rs  lib.rs  selectors.rs
tests/eql_tests/tests/: equality_tests.rs  jsonb_tests.rs
tests/sqlx/: COVERAGE_IMPROVEMENTS.md  Cargo.toml  README.md  RETROSPECTIVE.md  TEST_MIGRATION_COVERAGE.md
tests/sqlx/fixtures/: FIXTURE_SCHEMA.md  aggregate_minmax_data.sql  array_data.sql  bench_data.sql  bench_json_data.sql  bench_setup.sql  config_tables.sql  constraint_tables.sql  drop_operator_classes.sql  encrypted_json.sql  encryptindex_tables.sql  like_data.sql  order_by_null_data.sql
tests/sqlx/migrations/: 002_install_ore_data.sql  003_install_ste_vec_data.sql  004_install_test_helpers.sql  005_install_ste_vec_vast_data.sql  006_install_ore_text_data.sql  007_install_bench_data.sql  008_install_encrypted_text_fixture.sql  009_install_encrypted_int4_fixture.sql  010_install_encrypted_jsonb_fixture.sql  (+1 more)
(+552 files in other folders)
