[workspace]
members = [
    "eql-core",
    "eql-postgres",
    "eql-test",
    "eql-build",
]

resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
anyhow = "1.0"
thiserror = "1.0"
