[package]
name = "eql-sqlx-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
