[package]
name = "eql-types"
version = "0.1.0"
edition = "2021"
description = "Canonical wire types for EQL payloads — single source of truth for Rust, TypeScript (ts-rs), and JSON Schema (schemars)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-json-impl"] }
schemars = "0.8"
