[package]
name = "eql_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"

[dev-dependencies]
# None needed - tests live in this crate

[features]
default = []
# Opt-in to slow benchmark / regression / scale tests. Without this feature
# they're #[ignore]'d so PR CI stays fast. The `bench-eql` workflow enables
# it on push to main and on a nightly schedule. Run locally with:
#   mise run test:bench
bench = []
